--- a/index.html
+++ b/index.html
@@ -1,27 +1,31 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Cosmos | 3D Orbit Gallery</title>
-    <meta name="description" content="An immersive 3D cosmic experience - The cosmos is within us. We are made of star-stuff." />
-    <meta name="author" content="Lovable" />
 
-    <meta property="og:title" content="Cosmos | 3D Orbit Gallery" />
-    <meta property="og:description" content="An immersive 3D cosmic experience featuring orbiting images in a particle universe." />
-    <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Cosmos | 3D Orbit Gallery</title>
+  <meta name="description"
+    content="An immersive 3D cosmic experience - The cosmos is within us. We are made of star-stuff." />
+  <meta name="author" content="Lovable" />
 
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@Lovable" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+  <meta property="og:title" content="Cosmos | 3D Orbit Gallery" />
+  <meta property="og:description"
+    content="An immersive 3D cosmic experience featuring orbiting images in a particle universe." />
+  <meta property="og:type" content="website" />
+  <meta property="og:image" content="/og-image.png" />
 
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  </head>
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:site" content="@Lovable" />
+  <meta name="twitter:image" content="/og-image.png" />
 
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.tsx"></script>
-  </body>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+</head>
+
+<body>
+  <div id="root"></div>
+  <script type="module" src="/src/main.tsx"></script>
+</body>
+
 </html>
